css/main.css
@font-face{
	font-family: Radical;
	src: url('../fonts/Lady Radical.ttf');
}

@font-face{
	font-family: pixel;
	src: url('../fonts/m04b.TTF');
}

@font-face{
	font-family: litterlover;
	src: url('../fonts/litterlover.ttf');
}


body{
	background-color: #afecd1;
	background-image: url('../img/grass.png');
	background-repeat: repeat;
	margin: 40px;
}

.mxDim{
	max-width: 750px;
	max-height: 750px;
	margin: 0 auto;
}

.player {
	max-height: 750px;
	max-width: 750px;
	margin: auto;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	position:relative;
	overflow: hidden;
	/*text-align: center;*/
}

h1{
	font-family: Radical;
	text-align: center;
	font-size: 82px;
	margin: 0 auto;
}

.score{
	max-width: 570px;
	padding: 0 50px;
	margin: 0 auto;
}

.score p{	
	font-family: pixel;
	font-size: 18px;
	text-align: right;
}

.starter{
	text-align: center;
	position: absolute;
	z-index: 3;
	top: 45%;
	bottom: 55%;
	left: 0;
	right: 0;
}

.starter button{
	border: none;
	background: transparent;
	min-width: 306px;
	min-height: 102px;
	background-image: url('../img/wooden.png');
	background-repeat: no-repeat;
	font-family: litterlover;
	font-size: 30px;
	color: black;
}

.topHalf{
	position: relative;
	z-index: 0;
}

.botHalf{
	position: relative;
	z-index: 2;
}

.northBush{
	position: absolute;
	z-index: -1;
	top: 70px;
	left: 306px;
}
.eastBush{
	position: absolute;
	z-index: 1;
/*	top: 330px;*/
	top: 310px;
	right: 38px;
}

.southBush{
	position: absolute;
	z-index: 1;
	bottom: 20px;
	left: 306px;
}

.westBush{
	position: absolute;
	z-index: 1;
/*	top: 330px;*/
	top: 310px;
	left: 28px;
}

.fox{
	position: absolute;
	z-index: 1;
	max-height: 750px;
	max-width: 750px;
	top: 45%;
	bottom: 55%;
	left: 0px;
	right: 0px;

}

.fire{
	position: absolute;
	z-index: 3;
	top: 663px;
}

.hide{
	opacity: 0;
}

